src/assets/_sidebar.scss
.gds-sidebar-container {
  position: fixed;
  border-right: $chalk 1px solid;
  overflow: hidden auto;
  box-sizing: border-box;
  clip-path: inset(0px);

  ul {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    margin-bottom: 0;
    padding-left: 0;
    min-height: 100%;
    flex-direction: column;
    margin-block: 0px;
    padding-inline: 0px;
  }

  .sidebar {
    display: flex;
    flex-direction: column;
    margin: 0px;
    position: absolute;
    box-sizing: border-box;
    min-height: 100%;
    border-right: $chalk 1px solid;
    top: 0;
    left: 0;
    visibility: visible;
    transition: left 0.5s ease-in-out, visibility 0.5s linear;
  }

  .item {
    box-sizing: border-box;
    cursor: pointer;
    display: list-item;
    min-height: 32px;
    padding: 0px 10px;

    .label {
      display: flex;
      padding: 0px 10px 0px 20px;
    }

    a {
      padding: 10px 0px;
      border-radius: 4px;
      text-decoration: none;
      display: flex;
      color: unset;

      .external-link {
        margin: auto 10px auto 0px;
      }

      .chevron-right {
        margin: auto;
        margin-right: 10px;
      }
    }

    a:hover {
      background-color: rgba($chalk, 0.33);
    }

    a.active {
      background-color: rgba($primary, 0.33);
      color: $primary;
    }

    &.disabled {
      color: $silver;
      pointer-events: none;
    }
  }

  .section {
    font-weight: 600;
    min-height: 32px;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    color: $charcoal;
    display: flex;
    align-items: center;
    box-sizing: border-box;
  }

  .back {
    box-sizing: border-box;
    height: 32px;
    margin: 10px 10px 0px 10px;
    cursor: pointer;
    display: flex;
    align-items: center;
    border-radius: 4px;

    &:hover {
      background-color: rgba($chalk, 0.33);
    }

    .label {
      display: flex;

      .chevron-left {
        margin: auto 10px;
      }
    }
  }

  .sidebar-divider {
    margin: 15px;
    border-top: $chalk 1px solid;
  }

  &.submenu {
    .sidebar {
      visibility: hidden;
      transition: left 0.5s ease-in-out, visibility 0.5s linear 0.5s;
    }
  }

  &.unfixed {
    position: relative;
    height: fill-available;
    .submenu {
      position: absolute;
    }
  }

  .submenu {
    position: fixed;
    box-sizing: border-box;
    visibility: hidden;
    transition: left 0.5s ease-in-out, visibility 0.5s linear;

    &.visible {
      visibility: visible;
      transition: left 0.5s ease-in-out, visibility 0.5s linear;
    }
  }
}

